Added time_series_unit option in ui.json
